--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scikit-learn = "^1.2.2"
 seaborn = "^0.12.2"
 matplotlib = "^3.7.1"
 openpyxl = "3.1.2"
+SQLAlchemy = "^2.0.21"
 
 [tool.poetry.dev-dependencies]
 
