project completed, db needs to be updated
python code updated, preprocessing, model prediction, saving into db, different pages for each category.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ seaborn = "^0.12.2"
 matplotlib = "^3.7.1"
 openpyxl = "3.1.2"
 SQLAlchemy = "^2.0.21"
+contractions = "^0.1.73"
+nltk = "^3.8.1"
+spacy = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 
