--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ scikit-learn
 numpy
 openpyxl
 pickle5
-spacy
+spacy==3.0.6
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
 nltk
 contractions
 sqlalchemy
