--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ scikit-learn
 numpy
 openpyxl
 pickle5
-spacy==3.0.6
+spacy==3.7.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz
 nltk
 contractions
 sqlalchemy
 pymysql
 typing-extensions
-click==7.1.2
+click==8.1.3
+typer==0.9.0
